# csv-data-analyzer

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  run.py  sample_customer_data.csv  sample_sales_data.csv  sample_survey_data.csv
