[project]
name = "csv-data-analyzer"
version = "0.1.0"
description = "CSV Data Analysis and Visualization App with Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=2.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
]
